# Elpis

./: .env.example  .gitignore  AGENTS.md  GEMINI_GURU_CONSOLIDATE.txt  README.md  Tradingview.pine  smc.pine  smc_cme_filter_research.pine  smc_exact_copy_plus_cme.pine  smc_user_exact_plus_cme.pine
backend/: pyproject.toml
backend/scripts/: generate_xau_map_from_local_bundle.py  quikstrike_api_probe.py  quikstrike_browser_login.py  quikstrike_matrix_playwright_extract.py  quikstrike_playwright_extract.py  quikstrike_webforms_normalize.py  quikstrike_webforms_probe.py  run_xau_candidate_forward_outcomes.py  run_xau_daily_research_workbench.py  run_xau_plan_tracker.py  run_xau_plan_tracker_stats.py  run_xau_walk_forward_research.py  xau_daily_quikstrike_snapshot.py
backend/src/: config.py  main.py
backend/src/api/: dependencies.py  validation.py
backend/src/backtest/: __init__.py  engine.py  metrics.py  portfolio.py  report_store.py  validation.py
backend/src/data_bootstrap/: __init__.py  binance_public.py  orchestration.py  processing.py  report_store.py  yahoo_public.py
backend/src/data_sources/: __init__.py  bootstrap.py  capabilities.py  first_run.py  missing_data.py  preflight.py  readiness.py  report_store.py
backend/src/free_derivatives/: __init__.py  cftc.py  deribit.py  gvz.py  orchestration.py  processing.py  report_store.py
backend/src/models/: backtest.py  data_bootstrap.py  data_quality.py  data_sources.py  features.py  free_derivatives.py  market_data.py  providers.py  quikstrike.py  (+17 more)
backend/tests/: __init__.py  conftest.py  test_quickstart.py
(+780 files in other folders)
